fix ui alignment

--- a/src/components/TransactionBar/TransactionBar.css
+++ b/src/components/TransactionBar/TransactionBar.css
@@ -6,7 +6,7 @@
     color: black;
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: center;
     gap: 0.5rem;
     font-weight: 300;
 }
